--- a/Hotelweb/hotel.css
+++ b/Hotelweb/hotel.css
@@ -54,7 +54,7 @@
 }
 
 .full{
-    background: url(/Users/siva/Documents/javascript/Hotelweb/img/pic.jpg) no-repeat;
+    background: url(/Hotelweb/img/pic.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     width: 1750px;
